@@ -1,3 +1,8 @@
+version <unreleased>
+
+Extractors
++ [ustream] Support the new HLS streams (#10698)
+
 version 2016.09.19
 
 Extractors
